--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/hardfist/fe-learn#readme",
   "dependencies": {
+    "css-loader": "^0.28.7",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "style-loader": "^0.19.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
